--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^13.0.0
   flutter_map_location_marker: ^9.0.0
   image_picker: ^1.0.7
+  firebase_core: ^4.4.0
 
 dev_dependencies:
   flutter_test:
